@@ -13,6 +13,7 @@ Simon Wenner:
  * Paranoia: Basic session initialisation
  * Paranoia: Basic session closing
  * Paranoia: Encryptet messages are labelled
+ * Paranoia: Working commands: /otp help, info, on, off
 
 Christan Wäckerlin:
  * One-time pad documentation
@@ -29,3 +30,4 @@ Known bugs:
  * /otp info is only working after one message was received
  * the first encrypted sent message is not marked with <secure>
  * /me does not work encrypted
+ * there are some anomalies if both set /otp off and one tries to reenable
